--- a/volun-tinder/public/manifest.json
+++ b/volun-tinder/public/manifest.json
@@ -4,12 +4,12 @@
   "description": "A dating app for volunteers!",
   "icons": [
     {
-      "src": "./public/heart_hands192.png",
+      "src": "/heart_hands192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "./public/heart_hands.png",
+      "src": "/heart_hands.png",
       "type": "image/png",
       "sizes": "512x512"
     }
