--- a/volun-tinder/package.json
+++ b/volun-tinder/package.json
@@ -6,14 +6,13 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-
     "export": "next export",
     "deploy": "npm run build && npm run export",
     "test": "jest"
-
   },
   "dependencies": {
     "next": "9.3.5",
+    "next-offline": "^5.0.1",
     "next-pwa": "^2.3.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
