--- a/volun-tinder/package.json
+++ b/volun-tinder/package.json
@@ -11,6 +11,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "css-loader": "^3.5.3",
     "next": "9.3.5",
     "next-offline": "^5.0.1",
     "next-pwa": "^2.3.3",
