--- a/volun-tinder/package.json
+++ b/volun-tinder/package.json
@@ -12,11 +12,14 @@
   },
   "dependencies": {
     "css-loader": "^3.5.3",
+    "firebase": "^7.14.2",
+    "firebaseui": "^4.5.0",
     "next": "9.3.5",
     "next-offline": "^5.0.1",
     "next-pwa": "^2.3.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-firebaseui": "^4.1.0",
     "react-tinder-card": "^1.1.3"
   },
   "devDependencies": {
