--- a/volun-tinder/public/manifest.json
+++ b/volun-tinder/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Volun-Tinder",
-  "name": "Volun-Tinder",
+  "short_name": "Volt",
+  "name": "Volt",
   "description": "A dating app for volunteers!",
   "icons": [
     {
@@ -15,8 +15,8 @@
     }
   ],
   "start_url": "../pages/index.js",
-  "background_color": "#ffffff",
+  "background_color": " #f067b4",
   "display": "standalone",
   "scope": "/",
-  "theme_color": "#ffffff"
+  "theme_color": "#f067b4"
 }
