--- a/volun-tinder/package.json
+++ b/volun-tinder/package.json
@@ -18,6 +18,7 @@
     "next-pwa": "^2.3.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-flip-move": "^3.0.4",
     "react-tinder-card": "^1.1.3"
   },
   "devDependencies": {
