updated manifest with new app name

--- a/volun-tinder/public/manifest.json
+++ b/volun-tinder/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Volun-Tinder",
-  "name": "Volun-Tinder",
+  "short_name": "VOLT",
+  "name": "VOLT",
   "description": "A dating app for volunteers!",
   "icons": [
     {
