--- a/volun-tinder/package.json
+++ b/volun-tinder/package.json
@@ -11,6 +11,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "antd": "^4.2.0",
     "css-loader": "^3.5.3",
     "firebase": "^7.14.2",
     "next": "9.3.5",
