--- a/volun-tinder/.gitignore
+++ b/volun-tinder/.gitignore
@@ -1,5 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+firebase.js
+
 # dependencies
 /node_modules
 /.pnp
@@ -24,7 +26,6 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env 
 .env.local
 .env.development.local
 .env.test.local
