--- a/volun-tinder/package.json
+++ b/volun-tinder/package.json
@@ -6,7 +6,8 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "export": "npm run build && next export",
+    "export": "next export",
+    "deploy": "npm run build && npm run export",
     "test": "jest"
   },
   "dependencies": {
@@ -26,7 +27,6 @@
     "babel-jest": "^25.4.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "dotenv-webpack": "^1.7.0",
     "jest": "^25.4.0"
   }
 }
